--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 asgiref==3.7.2
+boto3==1.28.52
+botocore==1.31.52
 certifi==2023.5.7
 cffi==1.15.1
 charset-normalizer==3.1.0
@@ -11,20 +13,27 @@ django-cors-headers==4.1.0
 django-filter==23.2
 django-restframework==0.0.1
 django-shortcuts==1.6
+django-storages==1.14
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
 idna==3.4
 importlib-metadata==6.7.0
+jmespath==1.0.1
 Markdown==3.4.3
 oauthlib==3.2.2
+psycopg2-binary==2.9.7
 pycparser==2.21
 PyJWT==2.7.0
+python-dateutil==2.8.2
+python-dotenv==1.0.0
 python3-openid==3.2.0
 pytz==2023.3
 requests==2.31.0
 requests-oauthlib==1.3.1
+s3transfer==0.6.2
+six==1.16.0
 sqlparse==0.4.4
-typing_extensions==4.6.3
+typing-extensions==4.6.3
 tzdata==2023.3
-urllib3==2.0.3
+urllib3==1.26.16
 zipp==3.15.0
