--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,7 +33,7 @@ jobs:
           aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           application_name: 'ancatest'
-          environment_name: 'Ancatest-env'
+          environment_name: 'Ancatest-env-1'
           version_label: "python-${{ steps.format-time.outputs.replaced }}"
           region: "ap-northeast-2"
           deployment_package: deploy.zip
