--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,39 +1,32 @@
-name: EB_Deploy
-
+name: Deploy to cloudtype
 on:
   push:
-    branches: [master]
-
-jobs: 
-  deploy: 
-      runs-on: ubuntu-latest
-
-      steps:
-      - name: Checkout source code
+    branches:
+      - main
+jobs:
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Source
         uses: actions/checkout@v2
-
-      - name: Generate deployment package
-        run: zip -r deploy.zip . -x '*.git*'
-      
-      - name: Get timestamp
-        uses: gerred/actions/current-time@master
-        id: current-time
-
-      - name: Run string replace
-        uses: frabert/replace-string-action@master
-        id: format-time
+      - name: Connect
+        uses: cloudtype-github-actions/connect@v1
         with:
-          pattern: '[:\.]+'
-          string: "${{ steps.current-time.outputs.time }}"
-          replace-with: '-'
-          flags: 'g'
-      - name: Deploy to EB
-        uses: einaregilsson/beanstalk-deploy@v20
+          token: ${{ secrets.CLOUDTYPE_TOKEN }}
+          ghtoken: ${{ secrets.GHP_TOKEN }}
+          scope: cloudtype-ex
+      - name: Deploy
+        uses: cloudtype-github-actions/deploy@v1
         with:
-          aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          application_name: 'ancacaca'
-          environment_name: 'Ancacaca-env'
-          version_label: "python-${{ steps.format-time.outputs.replaced }}"
-          region: "ap-northeast-2"
-          deployment_package: deploy.zip
+          token: ${{ secrets.CLOUDTYPE_TOKEN }}
+          project: cloudtype-ex/react-abc
+          yaml: |-
+            name: vite-react
+            app: web
+            options:
+              nodeversion: "16"
+              docbase: /dist
+            context:
+              git:
+                ref: ${{ github.ref }}
+                url: git@github.com:${{ github.repository }}.git
