--- a/requirements.txt
+++ b/requirements.txt
@@ -33,6 +33,7 @@ pytz==2023.3
 requests==2.31.0
 requests-oauthlib==1.3.1
 s3transfer==0.6.2
+schedule==1.2.1
 six==1.16.0
 sqlparse==0.4.4
 typing-extensions==4.6.3
