--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+APScheduler==3.10.4
 asgiref==3.7.2
 boto3==1.28.52
 botocore==1.31.52
@@ -9,6 +10,7 @@ defusedxml==0.7.1
 dj-rest-auth==4.0.1
 Django==4.2.2
 django-allauth==0.54.0
+django-apscheduler==0.6.2
 django-cors-headers==4.1.0
 django-filter==23.2
 django-resized==1.0.2
@@ -38,5 +40,6 @@ six==1.16.0
 sqlparse==0.4.4
 typing-extensions==4.6.3
 tzdata==2023.3
+tzlocal==5.1
 urllib3==1.26.16
 zipp==3.15.0
