--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,7 +50,7 @@ jobs:
                 - name: AWS_STORAGE_BUCKET_NAME
                   value: ${{ secrets.AWS_STORAGE_BUCKET_NAME }}
               ports: "8000"
-              start: python3 manage.py runserver 0:8000
+              start: python3 manage.py runserver 0:8000 --noreload
               prestart: python3 manage.py makemigrations && python3 manage.py migrate &&
                 python3 manage.py collectstatic --noinput
             context:
