--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ APScheduler==3.10.4
 asgiref==3.7.2
 boto3==1.28.52
 botocore==1.31.52
+cachetools==5.3.1
 certifi==2023.5.7
 cffi==1.15.1
 charset-normalizer==3.1.0
@@ -19,13 +20,23 @@ django-shortcuts==1.6
 django-storages==1.14
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
+google-api-core==2.12.0
+google-auth==2.23.3
+google-cloud-vision==3.4.5
+googleapis-common-protos==1.61.0
+grpcio==1.59.0
+grpcio-status==1.59.0
 idna==3.4
 importlib-metadata==6.7.0
 jmespath==1.0.1
 Markdown==3.4.3
 oauthlib==3.2.2
 Pillow==10.0.1
+proto-plus==1.22.3
+protobuf==4.24.4
 psycopg2-binary==2.9.7
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
 pycparser==2.21
 PyJWT==2.7.0
 python-dateutil==2.8.2
@@ -34,6 +45,7 @@ python3-openid==3.2.0
 pytz==2023.3
 requests==2.31.0
 requests-oauthlib==1.3.1
+rsa==4.9
 s3transfer==0.6.2
 schedule==1.2.1
 six==1.16.0
