--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,20 +14,6 @@ jobs:
         with:
           token: ${{ secrets.CLOUDTYPE_TOKEN }}
           ghtoken: ${{ secrets.GHP_TOKEN }}
-      - name: create-json
-        id: create-json
-        uses: jsdaniell/create-json@v1.2.2
-        with:
-          name: "GOOGLE_APPLICATION_CREDENTIALS.json"
-          json: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
-          dir: '/'
-      - name: create-json2
-        id: create-json2
-        uses: jsdaniell/create-json@v1.2.2
-        with:
-          name: "test123.json"
-          json: '{"name":"jsdaniell", "password":"mypass"}'
-          dir: '/'
       - name: Deploy
         uses: cloudtype-github-actions/deploy@v1
         with:
@@ -69,6 +55,8 @@ jobs:
                   value: ${{ secrets.GCP_PRIVATE_KEY }}
                 - name: GCP_PRIVATE_KEY_ID
                   value: ${{ secrets.GCP_PRIVATE_KEY_ID }}
+                - name: GOOGLE_APPLICATION_CREDENTIALS
+                  value: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
 
               ports: "8000"
               start: python3 manage.py runserver 0:8000 --noreload
