--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Create and publish a Docker image to user's own registry, Deploy to Cloudt
 on:
   push:
     branches:
-      - main
+      - master
 
 env:
   REGISTRY: ghcr.io/mechauk418
