--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           token: ${{ secrets.CLOUDTYPE_TOKEN }}
           ghtoken: ${{ secrets.GHP_TOKEN }}
-      - name: create secret
+      - name: create-secret
         run: |
           touch secrets.json
           echo "${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}" >> secrets.json
