--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           token: ${{ secrets.CLOUDTYPE_TOKEN }}
           ghtoken: ${{ secrets.GHP_TOKEN }}
-      - name: create-secret
+      - name: Create-secret
         run: |
           touch secrets.json
           echo "${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}" >> secrets.json
@@ -25,7 +25,7 @@ jobs:
           project: mechauk418/eranca-gg
           stage: main
           yaml: >
-            name: eranca-gg
+            name: Eranca-gg
             app: python@3.9
             options:
               env:
