--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           token: ${{ secrets.CLOUDTYPE_TOKEN }}
           ghtoken: ${{ secrets.GHP_TOKEN }}
-      - name: Create-secret
+      - name: create-secret
         run: |
           touch secrets.json
           echo "${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}" >> secrets.json
@@ -25,7 +25,7 @@ jobs:
           project: mechauk418/eranca-gg
           stage: main
           yaml: >
-            name: Eranca-gg
+            name: eranca-gg
             app: python@3.9
             options:
               env:
@@ -57,8 +57,6 @@ jobs:
                   value: ${{ secrets.GCP_PRIVATE_KEY }}
                 - name: GCP_PRIVATE_KEY_ID
                   value: ${{ secrets.GCP_PRIVATE_KEY_ID }}
-                - name: GOOGLE_APPLICATION_CREDENTIALS
-                  value: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
               ports: "8000"
               start: python3 manage.py runserver 0:8000 --noreload
               prestart: python3 manage.py makemigrations && python3 manage.py migrate &&
