--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,15 +9,14 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+        with:
+          token: ${{ secrets.GHP_TOKEN }}
+          submodules: true
       - name: Connect deploy key
         uses: cloudtype-github-actions/connect@v1
         with:
           token: ${{ secrets.CLOUDTYPE_TOKEN }}
           ghtoken: ${{ secrets.GHP_TOKEN }}
-      - name: create-secret
-        run: |
-          touch secrets.json
-          echo "${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}" >> secrets.json
       - name: Deploy
         uses: cloudtype-github-actions/deploy@v1
         with:
