fix name error06

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,6 @@ jobs:
         with:
           name: "gcp.json"
           json: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
-          dir: 'gamerecord/'
       - name: Deploy
         uses: cloudtype-github-actions/deploy@v1
         with:
@@ -60,6 +59,8 @@ jobs:
                   value: ${{ secrets.GCP_PRIVATE_KEY }}
                 - name: GCP_PRIVATE_KEY_ID
                   value: ${{ secrets.GCP_PRIVATE_KEY_ID }}
+                - name: GOOGLE_APPLICATION_CREDENTIALS
+                  vlaue: gcp.json
               ports: 8000
               start: python3 manage.py runserver 0:8000 --noreload
               prestart: python3 manage.py makemigrations && python3 manage.py migrate &&
