--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,6 @@ jobs:
         with:
           name: "gcp.json"
           json: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
-          dir: 'app/'
       - name: Deploy
         uses: cloudtype-github-actions/deploy@v1
         with:
@@ -61,7 +60,7 @@ jobs:
                 - name: GCP_PRIVATE_KEY_ID
                   value: ${{ secrets.GCP_PRIVATE_KEY_ID }}
                 - name: GOOGLE_APPLICATION_CREDENTIALS
-                  vlaue: gcp.json
+                  vlaue: {"type": "service_account","project_id": "erancaocr","private_key_id": "c2cb2c8d4b175fea2bde844f42e1e36035f3b5c9"}
               ports: 8000
               start: python3 manage.py runserver 0:8000 --noreload
               prestart: python3 manage.py makemigrations && python3 manage.py migrate &&
