test create json16

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -60,7 +60,7 @@ jobs:
                 - name: GCP_PRIVATE_KEY_ID
                   value: ${{ secrets.GCP_PRIVATE_KEY_ID }}
                 - name: GOOGLE_APPLICATION_CREDENTIALS
-                  vlaue: {"type": "service_account","project_id": "erancaocr","private_key_id": "c2cb2c8d4b175fea2bde844f42e1e36035f3b5c9"}
+                  vlaue: ${{ secrets.GCP_PRIVATE_KEY_ID }}
               ports: 8000
               start: python3 manage.py runserver 0:8000 --noreload
               prestart: python3 manage.py makemigrations && python3 manage.py migrate &&
